--- a/Appfolder/www/styles.css
+++ b/Appfolder/www/styles.css
@@ -20,4 +20,71 @@
 
 .gitphoto {
     border-radius: 50%;
+    width: 70%;
+    opacity: 1;
+    display: block;
+    height: auto;
+    transition: .5s ease;
+    backface-visibility: hidden;
+}
+
+.Header {
+  min-height: 130px;
+  padding: 10px;
+  padding-bottom: 10px;
+  border-radius: 20px 20px 20px 20px;
+     /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#feffff+0,d2ebf9+100;Blue+3D+%2312 */
+background: #feffff; /* Old browsers */
+background: -moz-linear-gradient(top,  #feffff 0%, #d2ebf9 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(top,  #feffff 0%,#d2ebf9 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to bottom,  #feffff 0%,#d2ebf9 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#feffff', endColorstr='#d2ebf9',GradientType=0 ); /* IE6-9 */
+
+}
+
+.logopic {
+  display: block;
+  margin: auto;
+  width: 280px;
+  float:initial;
+}
+
+div.caption {
+  text-align: center;
+  padding: 10px;
+  font-size: 30px;
+ }
+ 
+.container-fluid {
+    padding-right: 5px;
+    padding-left: 5px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.txt {
+  background-color: #04AA6D;
+  color: white;
+  font-size: 16px;
+  padding: 16px 32px;
+  vertical-align: middle;
+}
+
+.middle {
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.column:hover .gitphoto {
+  opacity: 0.3;
+}
+
+.column:hover .middle {
+  opacity: 1;
 }
