--- a/Appfolder/www/styles.css
+++ b/Appfolder/www/styles.css
@@ -26,6 +26,8 @@
     height: auto;
     transition: .5s ease;
     backface-visibility: hidden;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .Header {
