--- a/Appfolder/www/styles.css
+++ b/Appfolder/www/styles.css
@@ -16,6 +16,7 @@
     flex: 33.33%;
     padding: 5px;
     text-align: center;
+    position: relative;
   }
 
 .gitphoto {
@@ -64,29 +65,22 @@ div.caption {
     margin-left: auto;
 }
 
-.txt {
-  background-color: #04AA6D;
-  color: white;
-  font-size: 16px;
-  padding: 16px 32px;
-  vertical-align: middle;
-}
-
-.middle {
-  transition: .5s ease;
-  opacity: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  text-align: center;
-}
-
 .column:hover .gitphoto {
   opacity: 0.3;
 }
 
-.column:hover .middle {
-  opacity: 1;
+.oculto {
+  position: absolute;
+  top: 30%;
+  left: 25%;
+  right: 25%;
+  bottom: 25%;
+  font-weight: bold;
+  visibility: hidden;
+  -webkit-transition: visibility 0s, opacity 0.5s linear;
+  transition: visibility 0s, opacity 0.5s linear;
+}
+
+.column:hover .oculto {
+  visibility: visible;
 }
