--- a/Appfolder/www/styles.css
+++ b/Appfolder/www/styles.css
@@ -107,3 +107,14 @@ div.caption {
   align-items: center;
   justify-content: center;
 }
+
+.ttside {
+  display: flex;
+  flex-direction: column;
+}
+
+.imgtt {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
